# LLMstudy

./: .gitignore  BPEtokenizer.py  GPT.py  attention.py  causalattention.py  check.py  data_loader.py  done_embedding.py  download.py  embedding.py  exampledeepneuralnetwork.py  fnn.py  gule.py  layernorm.py  learn_attention.py  learn_data_loader.py  learn_multi_attention.py  multi_head_attention.py  multi_head_attention_wrapper.py  normalization.py  pyproject.toml  split.py
src/llm/: __init__.py
