[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "xiejie143555", email = "1430819555@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
